# manage_my_studies

./: Cargo.toml  config.toml  course.toml
src/: cli.rs  config.rs  course.rs  main.rs  provider.rs  semester.rs  status.rs  store.rs  switch.rs  util.rs
src/domain/: config.rs  course.rs  mod.rs  paths.rs  semester.rs  store.rs
src/service/: course.rs  format.rs  mod.rs  semester.rs  service.rs  status.rs  switch.rs
