[package]
name = "uniman"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
dirs = "5.0.1"
either = "1.13.0"
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
walkdir = "2.5.0"
